// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> Snapshots should match placement default (bottom) rendering 1`] = `
Array [
  .emotion-10 {
  display: inline-block;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-family: Lato,Helvetica Neue,Helvetica,Arial,sans-serif;
  font-weight: 700;
  -webkit-transition-property: background,border,box-shadow,color;
  transition-property: background,border,box-shadow,color;
  -webkit-transition-duration: 100ms;
  transition-duration: 100ms;
  border: 1px solid;
  cursor: pointer;
  min-height: 2.25rem;
  padding-top: 0.375rem;
  padding-bottom: 0.375rem;
  padding-left: 1.125rem;
  padding-right: 1.125rem;
  font-size: 0.875rem;
  border-radius: 0.1875rem;
  width: medium;
  height: medium;
  padding-right: 0.75rem;
  padding-left: 0.75rem;
  background-image: linear-gradient(to bottom,#fff,#f3f3f3);
  background-color: #f3f3f3;
  border-color: #c4cacc;
  color: #494c4c;
  box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.15);
}

.emotion-8:disabled {
  pointer-events: none;
  cursor: default;
  opacity: 0.5;
  box-shadow: none;
}

.emotion-8:focus {
  outline: thin dotted;
  box-shadow: none;
}

.emotion-8 svg {
  fill: #494c4c;
  color: #fff;
}

.emotion-8:hover {
  color: #494c4c;
  background-image: none;
  background-color: #f3f3f3;
  border-color: #abb3b3;
}

.emotion-8:active {
  color: #494c4c;
  background-image: none;
  background-color: #f3f3f3;
  box-shadow: rgba(12,13,13,0.18) 0px 0px 0.375rem inset;
  border-color: #abb3b3;
}

.emotion-8.cr-button--hover,
.emotion-8.cr-button--active {
  color: #494c4c;
  background-image: none;
  background-color: #f3f3f3;
  border-color: #abb3b3;
}

.emotion-8.cr-button--active {
  color: #494c4c;
  background-image: none;
  background-color: #f3f3f3;
  box-shadow: rgba(12,13,13,0.18) 0px 0px 0.375rem inset;
  border-color: #abb3b3;
}

.emotion-6 {
  opacity: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-6 .emotion-1:not(:first-of-type) {
  margin-left: 0.5rem;
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  width: 1rem;
  height: 1rem;
  vertical-align: text-bottom;
}

<div
    className="emotion-10 emotion-11"
    display="inline-block"
  >
    <button
      className="  emotion-8 emotion-9"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      <span
        className="emotion-6 emotion-7"
      >
        <span
          className="emotion-0 emotion-1"
        >
          My Dropdown
           
        </span>
        <span
          className="emotion-0 emotion-1"
        >
          <svg
            className=" cr-icon emotion-2 emotion-3"
            style={
              Object {
                "height": "medium",
                "width": "medium",
              }
            }
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              className="cr-icon__base cr-icon__base-1"
              d="M7.299 10.641c.388.475 1.012.482 1.406 0L11.8 6.86c.389-.475.194-.86-.418-.86H4.623c-.62 0-.812.378-.418.86l3.094 3.781z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>,
  .emotion-0 {
  position: absolute;
  background: #f3f3f3;
  border-radius: 0.375rem;
  box-shadow: 0 0 0 0.0625rem rgba(12,13,13,0.15),0 0.1875rem 0.375rem rgba(12,13,13,0.15);
  z-index: 1;
  background-color: #fff;
  top: -5px !important;
  opacity: 0;
  visibility: hidden;
  pointer-events: none;
  -webkit-transition-property: opacity,visibility,-webkit-transform;
  -webkit-transition-property: opacity,visibility,transform;
  transition-property: opacity,visibility,transform;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,0.2,1);
  transition-timing-function: cubic-bezier(0,0,0.2,1);
  opacity: 0;
  visibility: hidden;
  pointer-events: none;
  -webkit-transition: opacity 100ms ease-in-out,visibility 100ms ease-in-out,top 100ms ease-in-out;
  transition: opacity 100ms ease-in-out,visibility 100ms ease-in-out,top 100ms ease-in-out;
}

.emotion-0[data-placement^='top'] {
  margin-bottom: 0.75rem;
}

.emotion-0[data-placement^='bottom'] {
  margin-top: 0.75rem;
}

.emotion-0[data-placement^='left'] {
  margin-right: 0.75rem;
}

.emotion-0[data-placement^='right'] {
  margin-left: 0.75rem;
}

.emotion-0::after,
.emotion-0::before {
  border: solid transparent;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.emotion-0[data-placement^='top'] .etvxp5h0::after,
.emotion-0[data-placement^='top'] .etvxp5h0::before {
  top: 100%;
  left: 50%;
}

.emotion-0[data-placement^='top'] .etvxp5h0::after {
  border-top-color: #f3f3f3;
  margin-left: -6px;
}

.emotion-0[data-placement^='top'] .etvxp5h0::after {
  border-top-color: #f3f3f3;
}

.emotion-0[data-placement^='top'] .etvxp5h0::before {
  border-top-color: rgba(12,13,13,0.15);
  margin-left: -7px;
}

.emotion-0[data-placement^='bottom'] .etvxp5h0::after,
.emotion-0[data-placement^='bottom'] .etvxp5h0::before {
  bottom: 100%;
  left: 50%;
}

.emotion-0[data-placement^='bottom'] .etvxp5h0::after {
  border-bottom-color: #f3f3f3;
  margin-left: -6px;
}

.emotion-0[data-placement^='bottom'] .etvxp5h0::after {
  border-bottom-color: #f3f3f3;
}

.emotion-0[data-placement^='bottom'] .etvxp5h0::before {
  border-bottom-color: rgba(12,13,13,0.15);
  margin-left: -7px;
}

.emotion-0[data-placement^='left'] .etvxp5h0::after,
.emotion-0[data-placement^='left'] .etvxp5h0::before {
  left: 100%;
  top: 50%;
}

.emotion-0[data-placement^='left'] .etvxp5h0::after {
  border-left-color: #f3f3f3;
  margin-top: -6px;
}

.emotion-0[data-placement^='left'] .etvxp5h0::after {
  border-left-color: #f3f3f3;
}

.emotion-0[data-placement^='left'] .etvxp5h0::before {
  border-left-color: rgba(12,13,13,0.15);
  margin-top: -7px;
}

.emotion-0[data-placement^='right'] .etvxp5h0::after,
.emotion-0[data-placement^='right'] .etvxp5h0::before {
  right: 100%;
  top: 50%;
}

.emotion-0[data-placement^='right'] .etvxp5h0::after {
  border-right-color: #f3f3f3;
  margin-top: -6px;
}

.emotion-0[data-placement^='right'] .etvxp5h0::after {
  border-right-color: #f3f3f3;
}

.emotion-0[data-placement^='right'] .etvxp5h0::before {
  border-right-color: rgba(12,13,13,0.15);
  margin-top: -7px;
}

.emotion-0[data-placement='top-start'] .etvxp5h0::before,
.emotion-0[data-placement='bottom-start'] .etvxp5h0::before,
.emotion-0[data-placement='top-start'] .etvxp5h0::after,
.emotion-0[data-placement='bottom-start'] .etvxp5h0::after {
  left: 18px;
}

.emotion-0[data-placement='left-start'] .etvxp5h0::before,
.emotion-0[data-placement='right-start'] .etvxp5h0::before,
.emotion-0[data-placement='left-start'] .etvxp5h0::after,
.emotion-0[data-placement='right-start'] .etvxp5h0::after {
  top: 18px;
}

.emotion-0[data-placement='top-end'] .etvxp5h0::before,
.emotion-0[data-placement='bottom-end'] .etvxp5h0::before,
.emotion-0[data-placement='top-end'] .etvxp5h0::after,
.emotion-0[data-placement='bottom-end'] .etvxp5h0::after {
  left: auto;
  right: 11px;
}

.emotion-0[data-placement='left-end'] .etvxp5h0::before,
.emotion-0[data-placement='right-end'] .etvxp5h0::before,
.emotion-0[data-placement='left-end'] .etvxp5h0::after,
.emotion-0[data-placement='right-end'] .etvxp5h0::after {
  top: auto;
  bottom: 11px;
}

.emotion-0[data-placement='top-end'] .etvxp5h0::before,
.emotion-0[data-placement='bottom-end'] .etvxp5h0::before {
  right: calc(11px - 1px);
}

.emotion-0[data-placement='left-end'] .etvxp5h0::before,
.emotion-0[data-placement='right-end'] .etvxp5h0::before {
  bottom: calc(11px - 1px);
}

.emotion-0[data-placement^='top'] .etvxp5h0::after {
  border-top-color: #fff;
}

.emotion-0[data-placement^='bottom'] .etvxp5h0::after {
  border-bottom-color: #fff;
}

.emotion-0[data-placement^='left'] .etvxp5h0::after {
  border-left-color: #fff;
}

.emotion-0[data-placement^='right'] .etvxp5h0::after {
  border-right-color: #fff;
}

.emotion-0 [data-placement$='-end'] .etvxp5h0::before {
  right: calc(11px - 1px);
}

<div
    className="emotion-0 emotion-1"
  >
    Some dropdown content
  </div>,
]
`;

exports[`<Dropdown /> Snapshots should match placement left rendering 1`] = `
Array [
  .emotion-10 {
  display: inline-block;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-family: Lato,Helvetica Neue,Helvetica,Arial,sans-serif;
  font-weight: 700;
  -webkit-transition-property: background,border,box-shadow,color;
  transition-property: background,border,box-shadow,color;
  -webkit-transition-duration: 100ms;
  transition-duration: 100ms;
  border: 1px solid;
  cursor: pointer;
  min-height: 2.25rem;
  padding-top: 0.375rem;
  padding-bottom: 0.375rem;
  padding-left: 1.125rem;
  padding-right: 1.125rem;
  font-size: 0.875rem;
  border-radius: 0.1875rem;
  width: medium;
  height: medium;
  padding-right: 0.75rem;
  padding-left: 0.75rem;
  background-image: linear-gradient(to bottom,#fff,#f3f3f3);
  background-color: #f3f3f3;
  border-color: #c4cacc;
  color: #494c4c;
  box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.15);
}

.emotion-8:disabled {
  pointer-events: none;
  cursor: default;
  opacity: 0.5;
  box-shadow: none;
}

.emotion-8:focus {
  outline: thin dotted;
  box-shadow: none;
}

.emotion-8 svg {
  fill: #494c4c;
  color: #fff;
}

.emotion-8:hover {
  color: #494c4c;
  background-image: none;
  background-color: #f3f3f3;
  border-color: #abb3b3;
}

.emotion-8:active {
  color: #494c4c;
  background-image: none;
  background-color: #f3f3f3;
  box-shadow: rgba(12,13,13,0.18) 0px 0px 0.375rem inset;
  border-color: #abb3b3;
}

.emotion-8.cr-button--hover,
.emotion-8.cr-button--active {
  color: #494c4c;
  background-image: none;
  background-color: #f3f3f3;
  border-color: #abb3b3;
}

.emotion-8.cr-button--active {
  color: #494c4c;
  background-image: none;
  background-color: #f3f3f3;
  box-shadow: rgba(12,13,13,0.18) 0px 0px 0.375rem inset;
  border-color: #abb3b3;
}

.emotion-6 {
  opacity: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-6 .emotion-1:not(:first-of-type) {
  margin-left: 0.5rem;
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  width: 1rem;
  height: 1rem;
  vertical-align: text-bottom;
}

<div
    className="emotion-10 emotion-11"
    display="inline-block"
  >
    <button
      className="  emotion-8 emotion-9"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      <span
        className="emotion-6 emotion-7"
      >
        <span
          className="emotion-0 emotion-1"
        >
          My Dropdown
           
        </span>
        <span
          className="emotion-0 emotion-1"
        >
          <svg
            className=" cr-icon emotion-2 emotion-3"
            style={
              Object {
                "height": "medium",
                "width": "medium",
              }
            }
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              className="cr-icon__base cr-icon__base-1"
              d="M7.299 10.641c.388.475 1.012.482 1.406 0L11.8 6.86c.389-.475.194-.86-.418-.86H4.623c-.62 0-.812.378-.418.86l3.094 3.781z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>,
  .emotion-0 {
  position: absolute;
  background: #f3f3f3;
  border-radius: 0.375rem;
  box-shadow: 0 0 0 0.0625rem rgba(12,13,13,0.15),0 0.1875rem 0.375rem rgba(12,13,13,0.15);
  z-index: 1;
  background-color: #fff;
  opacity: 0;
  visibility: hidden;
  pointer-events: none;
  -webkit-transition-property: opacity,visibility,-webkit-transform;
  -webkit-transition-property: opacity,visibility,transform;
  transition-property: opacity,visibility,transform;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,0.2,1);
  transition-timing-function: cubic-bezier(0,0,0.2,1);
  opacity: 0;
  visibility: hidden;
  pointer-events: none;
  -webkit-transition: opacity 100ms ease-in-out,visibility 100ms ease-in-out,top 100ms ease-in-out;
  transition: opacity 100ms ease-in-out,visibility 100ms ease-in-out,top 100ms ease-in-out;
}

.emotion-0[data-placement^='top'] {
  margin-bottom: 0.75rem;
}

.emotion-0[data-placement^='bottom'] {
  margin-top: 0.75rem;
}

.emotion-0[data-placement^='left'] {
  margin-right: 0.75rem;
}

.emotion-0[data-placement^='right'] {
  margin-left: 0.75rem;
}

.emotion-0::after,
.emotion-0::before {
  border: solid transparent;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.emotion-0[data-placement^='top'] .etvxp5h0::after,
.emotion-0[data-placement^='top'] .etvxp5h0::before {
  top: 100%;
  left: 50%;
}

.emotion-0[data-placement^='top'] .etvxp5h0::after {
  border-top-color: #f3f3f3;
  margin-left: -6px;
}

.emotion-0[data-placement^='top'] .etvxp5h0::after {
  border-top-color: #f3f3f3;
}

.emotion-0[data-placement^='top'] .etvxp5h0::before {
  border-top-color: rgba(12,13,13,0.15);
  margin-left: -7px;
}

.emotion-0[data-placement^='bottom'] .etvxp5h0::after,
.emotion-0[data-placement^='bottom'] .etvxp5h0::before {
  bottom: 100%;
  left: 50%;
}

.emotion-0[data-placement^='bottom'] .etvxp5h0::after {
  border-bottom-color: #f3f3f3;
  margin-left: -6px;
}

.emotion-0[data-placement^='bottom'] .etvxp5h0::after {
  border-bottom-color: #f3f3f3;
}

.emotion-0[data-placement^='bottom'] .etvxp5h0::before {
  border-bottom-color: rgba(12,13,13,0.15);
  margin-left: -7px;
}

.emotion-0[data-placement^='left'] .etvxp5h0::after,
.emotion-0[data-placement^='left'] .etvxp5h0::before {
  left: 100%;
  top: 50%;
}

.emotion-0[data-placement^='left'] .etvxp5h0::after {
  border-left-color: #f3f3f3;
  margin-top: -6px;
}

.emotion-0[data-placement^='left'] .etvxp5h0::after {
  border-left-color: #f3f3f3;
}

.emotion-0[data-placement^='left'] .etvxp5h0::before {
  border-left-color: rgba(12,13,13,0.15);
  margin-top: -7px;
}

.emotion-0[data-placement^='right'] .etvxp5h0::after,
.emotion-0[data-placement^='right'] .etvxp5h0::before {
  right: 100%;
  top: 50%;
}

.emotion-0[data-placement^='right'] .etvxp5h0::after {
  border-right-color: #f3f3f3;
  margin-top: -6px;
}

.emotion-0[data-placement^='right'] .etvxp5h0::after {
  border-right-color: #f3f3f3;
}

.emotion-0[data-placement^='right'] .etvxp5h0::before {
  border-right-color: rgba(12,13,13,0.15);
  margin-top: -7px;
}

.emotion-0[data-placement='top-start'] .etvxp5h0::before,
.emotion-0[data-placement='bottom-start'] .etvxp5h0::before,
.emotion-0[data-placement='top-start'] .etvxp5h0::after,
.emotion-0[data-placement='bottom-start'] .etvxp5h0::after {
  left: 18px;
}

.emotion-0[data-placement='left-start'] .etvxp5h0::before,
.emotion-0[data-placement='right-start'] .etvxp5h0::before,
.emotion-0[data-placement='left-start'] .etvxp5h0::after,
.emotion-0[data-placement='right-start'] .etvxp5h0::after {
  top: 18px;
}

.emotion-0[data-placement='top-end'] .etvxp5h0::before,
.emotion-0[data-placement='bottom-end'] .etvxp5h0::before,
.emotion-0[data-placement='top-end'] .etvxp5h0::after,
.emotion-0[data-placement='bottom-end'] .etvxp5h0::after {
  left: auto;
  right: 11px;
}

.emotion-0[data-placement='left-end'] .etvxp5h0::before,
.emotion-0[data-placement='right-end'] .etvxp5h0::before,
.emotion-0[data-placement='left-end'] .etvxp5h0::after,
.emotion-0[data-placement='right-end'] .etvxp5h0::after {
  top: auto;
  bottom: 11px;
}

.emotion-0[data-placement='top-end'] .etvxp5h0::before,
.emotion-0[data-placement='bottom-end'] .etvxp5h0::before {
  right: calc(11px - 1px);
}

.emotion-0[data-placement='left-end'] .etvxp5h0::before,
.emotion-0[data-placement='right-end'] .etvxp5h0::before {
  bottom: calc(11px - 1px);
}

.emotion-0[data-placement^='top'] .etvxp5h0::after {
  border-top-color: #fff;
}

.emotion-0[data-placement^='bottom'] .etvxp5h0::after {
  border-bottom-color: #fff;
}

.emotion-0[data-placement^='left'] .etvxp5h0::after {
  border-left-color: #fff;
}

.emotion-0[data-placement^='right'] .etvxp5h0::after {
  border-right-color: #fff;
}

.emotion-0 [data-placement$='-end'] .etvxp5h0::before {
  right: calc(11px - 1px);
}

<div
    className="emotion-0 emotion-1"
  >
    Some dropdown content
  </div>,
]
`;

exports[`<Dropdown /> Snapshots should match placement right rendering 1`] = `
Array [
  .emotion-10 {
  display: inline-block;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-family: Lato,Helvetica Neue,Helvetica,Arial,sans-serif;
  font-weight: 700;
  -webkit-transition-property: background,border,box-shadow,color;
  transition-property: background,border,box-shadow,color;
  -webkit-transition-duration: 100ms;
  transition-duration: 100ms;
  border: 1px solid;
  cursor: pointer;
  min-height: 2.25rem;
  padding-top: 0.375rem;
  padding-bottom: 0.375rem;
  padding-left: 1.125rem;
  padding-right: 1.125rem;
  font-size: 0.875rem;
  border-radius: 0.1875rem;
  width: medium;
  height: medium;
  padding-right: 0.75rem;
  padding-left: 0.75rem;
  background-image: linear-gradient(to bottom,#fff,#f3f3f3);
  background-color: #f3f3f3;
  border-color: #c4cacc;
  color: #494c4c;
  box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.15);
}

.emotion-8:disabled {
  pointer-events: none;
  cursor: default;
  opacity: 0.5;
  box-shadow: none;
}

.emotion-8:focus {
  outline: thin dotted;
  box-shadow: none;
}

.emotion-8 svg {
  fill: #494c4c;
  color: #fff;
}

.emotion-8:hover {
  color: #494c4c;
  background-image: none;
  background-color: #f3f3f3;
  border-color: #abb3b3;
}

.emotion-8:active {
  color: #494c4c;
  background-image: none;
  background-color: #f3f3f3;
  box-shadow: rgba(12,13,13,0.18) 0px 0px 0.375rem inset;
  border-color: #abb3b3;
}

.emotion-8.cr-button--hover,
.emotion-8.cr-button--active {
  color: #494c4c;
  background-image: none;
  background-color: #f3f3f3;
  border-color: #abb3b3;
}

.emotion-8.cr-button--active {
  color: #494c4c;
  background-image: none;
  background-color: #f3f3f3;
  box-shadow: rgba(12,13,13,0.18) 0px 0px 0.375rem inset;
  border-color: #abb3b3;
}

.emotion-6 {
  opacity: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-6 .emotion-1:not(:first-of-type) {
  margin-left: 0.5rem;
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  width: 1rem;
  height: 1rem;
  vertical-align: text-bottom;
}

<div
    className="emotion-10 emotion-11"
    display="inline-block"
  >
    <button
      className="  emotion-8 emotion-9"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      <span
        className="emotion-6 emotion-7"
      >
        <span
          className="emotion-0 emotion-1"
        >
          My Dropdown
           
        </span>
        <span
          className="emotion-0 emotion-1"
        >
          <svg
            className=" cr-icon emotion-2 emotion-3"
            style={
              Object {
                "height": "medium",
                "width": "medium",
              }
            }
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              className="cr-icon__base cr-icon__base-1"
              d="M7.299 10.641c.388.475 1.012.482 1.406 0L11.8 6.86c.389-.475.194-.86-.418-.86H4.623c-.62 0-.812.378-.418.86l3.094 3.781z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>,
  .emotion-0 {
  position: absolute;
  background: #f3f3f3;
  border-radius: 0.375rem;
  box-shadow: 0 0 0 0.0625rem rgba(12,13,13,0.15),0 0.1875rem 0.375rem rgba(12,13,13,0.15);
  z-index: 1;
  background-color: #fff;
  opacity: 0;
  visibility: hidden;
  pointer-events: none;
  -webkit-transition-property: opacity,visibility,-webkit-transform;
  -webkit-transition-property: opacity,visibility,transform;
  transition-property: opacity,visibility,transform;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,0.2,1);
  transition-timing-function: cubic-bezier(0,0,0.2,1);
  opacity: 0;
  visibility: hidden;
  pointer-events: none;
  -webkit-transition: opacity 100ms ease-in-out,visibility 100ms ease-in-out,top 100ms ease-in-out;
  transition: opacity 100ms ease-in-out,visibility 100ms ease-in-out,top 100ms ease-in-out;
}

.emotion-0[data-placement^='top'] {
  margin-bottom: 0.75rem;
}

.emotion-0[data-placement^='bottom'] {
  margin-top: 0.75rem;
}

.emotion-0[data-placement^='left'] {
  margin-right: 0.75rem;
}

.emotion-0[data-placement^='right'] {
  margin-left: 0.75rem;
}

.emotion-0::after,
.emotion-0::before {
  border: solid transparent;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.emotion-0[data-placement^='top'] .etvxp5h0::after,
.emotion-0[data-placement^='top'] .etvxp5h0::before {
  top: 100%;
  left: 50%;
}

.emotion-0[data-placement^='top'] .etvxp5h0::after {
  border-top-color: #f3f3f3;
  margin-left: -6px;
}

.emotion-0[data-placement^='top'] .etvxp5h0::after {
  border-top-color: #f3f3f3;
}

.emotion-0[data-placement^='top'] .etvxp5h0::before {
  border-top-color: rgba(12,13,13,0.15);
  margin-left: -7px;
}

.emotion-0[data-placement^='bottom'] .etvxp5h0::after,
.emotion-0[data-placement^='bottom'] .etvxp5h0::before {
  bottom: 100%;
  left: 50%;
}

.emotion-0[data-placement^='bottom'] .etvxp5h0::after {
  border-bottom-color: #f3f3f3;
  margin-left: -6px;
}

.emotion-0[data-placement^='bottom'] .etvxp5h0::after {
  border-bottom-color: #f3f3f3;
}

.emotion-0[data-placement^='bottom'] .etvxp5h0::before {
  border-bottom-color: rgba(12,13,13,0.15);
  margin-left: -7px;
}

.emotion-0[data-placement^='left'] .etvxp5h0::after,
.emotion-0[data-placement^='left'] .etvxp5h0::before {
  left: 100%;
  top: 50%;
}

.emotion-0[data-placement^='left'] .etvxp5h0::after {
  border-left-color: #f3f3f3;
  margin-top: -6px;
}

.emotion-0[data-placement^='left'] .etvxp5h0::after {
  border-left-color: #f3f3f3;
}

.emotion-0[data-placement^='left'] .etvxp5h0::before {
  border-left-color: rgba(12,13,13,0.15);
  margin-top: -7px;
}

.emotion-0[data-placement^='right'] .etvxp5h0::after,
.emotion-0[data-placement^='right'] .etvxp5h0::before {
  right: 100%;
  top: 50%;
}

.emotion-0[data-placement^='right'] .etvxp5h0::after {
  border-right-color: #f3f3f3;
  margin-top: -6px;
}

.emotion-0[data-placement^='right'] .etvxp5h0::after {
  border-right-color: #f3f3f3;
}

.emotion-0[data-placement^='right'] .etvxp5h0::before {
  border-right-color: rgba(12,13,13,0.15);
  margin-top: -7px;
}

.emotion-0[data-placement='top-start'] .etvxp5h0::before,
.emotion-0[data-placement='bottom-start'] .etvxp5h0::before,
.emotion-0[data-placement='top-start'] .etvxp5h0::after,
.emotion-0[data-placement='bottom-start'] .etvxp5h0::after {
  left: 18px;
}

.emotion-0[data-placement='left-start'] .etvxp5h0::before,
.emotion-0[data-placement='right-start'] .etvxp5h0::before,
.emotion-0[data-placement='left-start'] .etvxp5h0::after,
.emotion-0[data-placement='right-start'] .etvxp5h0::after {
  top: 18px;
}

.emotion-0[data-placement='top-end'] .etvxp5h0::before,
.emotion-0[data-placement='bottom-end'] .etvxp5h0::before,
.emotion-0[data-placement='top-end'] .etvxp5h0::after,
.emotion-0[data-placement='bottom-end'] .etvxp5h0::after {
  left: auto;
  right: 11px;
}

.emotion-0[data-placement='left-end'] .etvxp5h0::before,
.emotion-0[data-placement='right-end'] .etvxp5h0::before,
.emotion-0[data-placement='left-end'] .etvxp5h0::after,
.emotion-0[data-placement='right-end'] .etvxp5h0::after {
  top: auto;
  bottom: 11px;
}

.emotion-0[data-placement='top-end'] .etvxp5h0::before,
.emotion-0[data-placement='bottom-end'] .etvxp5h0::before {
  right: calc(11px - 1px);
}

.emotion-0[data-placement='left-end'] .etvxp5h0::before,
.emotion-0[data-placement='right-end'] .etvxp5h0::before {
  bottom: calc(11px - 1px);
}

.emotion-0[data-placement^='top'] .etvxp5h0::after {
  border-top-color: #fff;
}

.emotion-0[data-placement^='bottom'] .etvxp5h0::after {
  border-bottom-color: #fff;
}

.emotion-0[data-placement^='left'] .etvxp5h0::after {
  border-left-color: #fff;
}

.emotion-0[data-placement^='right'] .etvxp5h0::after {
  border-right-color: #fff;
}

.emotion-0 [data-placement$='-end'] .etvxp5h0::before {
  right: calc(11px - 1px);
}

<div
    className="emotion-0 emotion-1"
  >
    Some dropdown content
  </div>,
]
`;

exports[`<Dropdown /> Snapshots should match placement top rendering 1`] = `
Array [
  .emotion-10 {
  display: inline-block;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-family: Lato,Helvetica Neue,Helvetica,Arial,sans-serif;
  font-weight: 700;
  -webkit-transition-property: background,border,box-shadow,color;
  transition-property: background,border,box-shadow,color;
  -webkit-transition-duration: 100ms;
  transition-duration: 100ms;
  border: 1px solid;
  cursor: pointer;
  min-height: 2.25rem;
  padding-top: 0.375rem;
  padding-bottom: 0.375rem;
  padding-left: 1.125rem;
  padding-right: 1.125rem;
  font-size: 0.875rem;
  border-radius: 0.1875rem;
  width: medium;
  height: medium;
  padding-right: 0.75rem;
  padding-left: 0.75rem;
  background-image: linear-gradient(to bottom,#fff,#f3f3f3);
  background-color: #f3f3f3;
  border-color: #c4cacc;
  color: #494c4c;
  box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.15);
}

.emotion-8:disabled {
  pointer-events: none;
  cursor: default;
  opacity: 0.5;
  box-shadow: none;
}

.emotion-8:focus {
  outline: thin dotted;
  box-shadow: none;
}

.emotion-8 svg {
  fill: #494c4c;
  color: #fff;
}

.emotion-8:hover {
  color: #494c4c;
  background-image: none;
  background-color: #f3f3f3;
  border-color: #abb3b3;
}

.emotion-8:active {
  color: #494c4c;
  background-image: none;
  background-color: #f3f3f3;
  box-shadow: rgba(12,13,13,0.18) 0px 0px 0.375rem inset;
  border-color: #abb3b3;
}

.emotion-8.cr-button--hover,
.emotion-8.cr-button--active {
  color: #494c4c;
  background-image: none;
  background-color: #f3f3f3;
  border-color: #abb3b3;
}

.emotion-8.cr-button--active {
  color: #494c4c;
  background-image: none;
  background-color: #f3f3f3;
  box-shadow: rgba(12,13,13,0.18) 0px 0px 0.375rem inset;
  border-color: #abb3b3;
}

.emotion-6 {
  opacity: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-6 .emotion-1:not(:first-of-type) {
  margin-left: 0.5rem;
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  width: 1rem;
  height: 1rem;
  vertical-align: text-bottom;
}

<div
    className="emotion-10 emotion-11"
    display="inline-block"
  >
    <button
      className="  emotion-8 emotion-9"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      <span
        className="emotion-6 emotion-7"
      >
        <span
          className="emotion-0 emotion-1"
        >
          My Dropdown
           
        </span>
        <span
          className="emotion-0 emotion-1"
        >
          <svg
            className=" cr-icon emotion-2 emotion-3"
            style={
              Object {
                "height": "medium",
                "width": "medium",
              }
            }
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              className="cr-icon__base cr-icon__base-1"
              d="M7.299 10.641c.388.475 1.012.482 1.406 0L11.8 6.86c.389-.475.194-.86-.418-.86H4.623c-.62 0-.812.378-.418.86l3.094 3.781z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>,
  .emotion-0 {
  position: absolute;
  background: #f3f3f3;
  border-radius: 0.375rem;
  box-shadow: 0 0 0 0.0625rem rgba(12,13,13,0.15),0 0.1875rem 0.375rem rgba(12,13,13,0.15);
  z-index: 1;
  background-color: #fff;
  top: 5px !important;
  opacity: 0;
  visibility: hidden;
  pointer-events: none;
  -webkit-transition-property: opacity,visibility,-webkit-transform;
  -webkit-transition-property: opacity,visibility,transform;
  transition-property: opacity,visibility,transform;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,0.2,1);
  transition-timing-function: cubic-bezier(0,0,0.2,1);
  opacity: 0;
  visibility: hidden;
  pointer-events: none;
  -webkit-transition: opacity 100ms ease-in-out,visibility 100ms ease-in-out,top 100ms ease-in-out;
  transition: opacity 100ms ease-in-out,visibility 100ms ease-in-out,top 100ms ease-in-out;
}

.emotion-0[data-placement^='top'] {
  margin-bottom: 0.75rem;
}

.emotion-0[data-placement^='bottom'] {
  margin-top: 0.75rem;
}

.emotion-0[data-placement^='left'] {
  margin-right: 0.75rem;
}

.emotion-0[data-placement^='right'] {
  margin-left: 0.75rem;
}

.emotion-0::after,
.emotion-0::before {
  border: solid transparent;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.emotion-0[data-placement^='top'] .etvxp5h0::after,
.emotion-0[data-placement^='top'] .etvxp5h0::before {
  top: 100%;
  left: 50%;
}

.emotion-0[data-placement^='top'] .etvxp5h0::after {
  border-top-color: #f3f3f3;
  margin-left: -6px;
}

.emotion-0[data-placement^='top'] .etvxp5h0::after {
  border-top-color: #f3f3f3;
}

.emotion-0[data-placement^='top'] .etvxp5h0::before {
  border-top-color: rgba(12,13,13,0.15);
  margin-left: -7px;
}

.emotion-0[data-placement^='bottom'] .etvxp5h0::after,
.emotion-0[data-placement^='bottom'] .etvxp5h0::before {
  bottom: 100%;
  left: 50%;
}

.emotion-0[data-placement^='bottom'] .etvxp5h0::after {
  border-bottom-color: #f3f3f3;
  margin-left: -6px;
}

.emotion-0[data-placement^='bottom'] .etvxp5h0::after {
  border-bottom-color: #f3f3f3;
}

.emotion-0[data-placement^='bottom'] .etvxp5h0::before {
  border-bottom-color: rgba(12,13,13,0.15);
  margin-left: -7px;
}

.emotion-0[data-placement^='left'] .etvxp5h0::after,
.emotion-0[data-placement^='left'] .etvxp5h0::before {
  left: 100%;
  top: 50%;
}

.emotion-0[data-placement^='left'] .etvxp5h0::after {
  border-left-color: #f3f3f3;
  margin-top: -6px;
}

.emotion-0[data-placement^='left'] .etvxp5h0::after {
  border-left-color: #f3f3f3;
}

.emotion-0[data-placement^='left'] .etvxp5h0::before {
  border-left-color: rgba(12,13,13,0.15);
  margin-top: -7px;
}

.emotion-0[data-placement^='right'] .etvxp5h0::after,
.emotion-0[data-placement^='right'] .etvxp5h0::before {
  right: 100%;
  top: 50%;
}

.emotion-0[data-placement^='right'] .etvxp5h0::after {
  border-right-color: #f3f3f3;
  margin-top: -6px;
}

.emotion-0[data-placement^='right'] .etvxp5h0::after {
  border-right-color: #f3f3f3;
}

.emotion-0[data-placement^='right'] .etvxp5h0::before {
  border-right-color: rgba(12,13,13,0.15);
  margin-top: -7px;
}

.emotion-0[data-placement='top-start'] .etvxp5h0::before,
.emotion-0[data-placement='bottom-start'] .etvxp5h0::before,
.emotion-0[data-placement='top-start'] .etvxp5h0::after,
.emotion-0[data-placement='bottom-start'] .etvxp5h0::after {
  left: 18px;
}

.emotion-0[data-placement='left-start'] .etvxp5h0::before,
.emotion-0[data-placement='right-start'] .etvxp5h0::before,
.emotion-0[data-placement='left-start'] .etvxp5h0::after,
.emotion-0[data-placement='right-start'] .etvxp5h0::after {
  top: 18px;
}

.emotion-0[data-placement='top-end'] .etvxp5h0::before,
.emotion-0[data-placement='bottom-end'] .etvxp5h0::before,
.emotion-0[data-placement='top-end'] .etvxp5h0::after,
.emotion-0[data-placement='bottom-end'] .etvxp5h0::after {
  left: auto;
  right: 11px;
}

.emotion-0[data-placement='left-end'] .etvxp5h0::before,
.emotion-0[data-placement='right-end'] .etvxp5h0::before,
.emotion-0[data-placement='left-end'] .etvxp5h0::after,
.emotion-0[data-placement='right-end'] .etvxp5h0::after {
  top: auto;
  bottom: 11px;
}

.emotion-0[data-placement='top-end'] .etvxp5h0::before,
.emotion-0[data-placement='bottom-end'] .etvxp5h0::before {
  right: calc(11px - 1px);
}

.emotion-0[data-placement='left-end'] .etvxp5h0::before,
.emotion-0[data-placement='right-end'] .etvxp5h0::before {
  bottom: calc(11px - 1px);
}

.emotion-0[data-placement^='top'] .etvxp5h0::after {
  border-top-color: #fff;
}

.emotion-0[data-placement^='bottom'] .etvxp5h0::after {
  border-bottom-color: #fff;
}

.emotion-0[data-placement^='left'] .etvxp5h0::after {
  border-left-color: #fff;
}

.emotion-0[data-placement^='right'] .etvxp5h0::after {
  border-right-color: #fff;
}

.emotion-0 [data-placement$='-end'] .etvxp5h0::before {
  right: calc(11px - 1px);
}

<div
    className="emotion-0 emotion-1"
  >
    Some dropdown content
  </div>,
]
`;
